<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:name="pref_screen_name" android:key="pref_screen_key">

    <Preference
        android:key="kill_chrome"
        android:title="@string/kill_chrome"
        android:summary="@string/kill_chrome_summary" />
    <ListPreference
        android:key="trigger_side"
        android:title="@string/trigger_side"
        android:entries="@array/trigger_side_entries"
        android:entryValues="@array/trigger_side_values"
        android:defaultValue="both" />
    <com.jt5.xposed.chromepie.preference.PieSeekBarPreference
        android:key="pie_radius_inc"
        android:title="@string/pie_size_title"
        android:defaultValue="@integer/qc_radius_increment"
        minimum="60"
        maximum="200" />
    <com.jt5.xposed.chromepie.preference.PieSeekBarPreference
        android:key="pie_slop"
        android:title="@string/trigger_area_title"
        android:defaultValue="@integer/qc_slop"
        minimum="5"
        maximum="30" />
    <PreferenceCategory
        android:key="pie_slices_cat"
        android:title="@string/pie_slices_cat" />
    <Preference
        android:key="new_slice"
        android:title="@string/new_slice"
        android:icon="@drawable/ic_action_new" />
    <PreferenceCategory
        android:key="other_cat"
        android:title="@string/other_cat_title" />
    <CheckBoxPreference
        android:key="hide_launcher_icon"
        android:title="@string/hide_launcher_icon_title"
        android:defaultValue="false" />
    <Preference
        android:key="donate"
        android:title="@string/donate_title"
        android:summary="@string/donate_summary" >
        <intent 
            android:action="android.intent.action.VIEW"
            android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=KBY3MHRMVW5PG" />
    </Preference>

</PreferenceScreen>
